--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -2,33 +2,47 @@
 
 @tailwind base;
 @tailwind components;
+@tailwind utilities;
 
 html {
   font-family: "Rubik", sans-serif;
 }
+
 body {
-  @apply bg-white-500;
+  background-color: white;
 }
+
 p {
-  @apply text-black-500;
+  color: rgba(0, 0, 0, 0.8);
 }
+
 .animation-hover:after {
   background: none repeat scroll 0 0 transparent;
   content: "";
   height: 2px;
   transition: width 0.3s ease 0s, left 0.3s ease 0s;
-  @apply w-0 bg-orange-500 left-1/2 block bottom-0 absolute;
+  width: 0;
+  background-color: blue;
+  left: 50%;
+  bottom: 0;
+  position: absolute;
 }
+
 .animation-active:after {
-  @apply left-0 w-full;
+  left: 0;
+  width: 100%;
 }
+
 .animation-hover:hover:after {
-  @apply left-0 w-full;
+  width: 100%;
+  left: 0;
 }
 
 li.custom-list:before {
-  content: "\2022"; /* bullet point, for screen readers */
-  text-indent: -9999999px; /* move the bullet point out of sight */
+  content: "\2022";
+  /* bullet point, for screen readers */
+  text-indent: -9999999px;
+  /* move the bullet point out of sight */
 
   width: 0.4em;
   height: 1em;
@@ -38,28 +52,37 @@ li.custom-list:before {
   background-position: 0 0.3em;
   font-size: 300%;
   top: -0.35em;
-  @apply absolute block;
+  position: absolute;
+  display: block;
 }
+
 li.circle-check:before {
   background-image: url("/assets/Icon/checklist.svg");
   left: -0.7em;
   top: -0.4em;
 }
+
 li.check:before {
   left: -0.5em;
   background-image: url("/assets/Icon/jam_check.svg");
   top: -0.5em;
   font-size: 400%;
 }
+
 /* Slideshow */
 .slick-dots li {
-  @apply inline-block;
+  display: inline-block;
 }
+
 .slick-dots span {
-  @apply bg-gray-500;
+  background-color: gray;
 }
+
 .slick-dots .slick-active span {
-  @apply bg-orange-500 rounded-l-full rounded-r-full w-12;
+  background-color: blue;
+  border-top-left-radius: 9999px;
+  border-bottom-left-radius: 9999px;
+  width: 3rem;
 }
 
 /* card style */
@@ -69,12 +92,13 @@ li.check:before {
   padding-bottom: 8px;
   border-radius: 16px;
   position: relative;
-  border: 2px solid #c3c6ce;
+  border: 2px solid white;
   transition: 0.5s ease-out;
   overflow: visible;
- }
- 
- .card-button, .project-button {
+}
+
+.card-button,
+.project-button {
   transform: translate(-50%, 125%);
   width: 60%;
   border-radius: 1rem;
@@ -87,34 +111,29 @@ li.check:before {
   bottom: 0;
   opacity: 0;
   transition: 0.3s ease-out;
- }
- 
- 
- /*Hover*/
- .card:hover {
-  box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
- }
- 
- .card:hover .card-button {
-  transform: translate(-50%, 50%);
-  opacity: 1;
- }
- .card:hover .project-button {
-  transform: translate(-50%, 0%);
-  opacity: 1;
- }
-
- @media (max-width: 768px) {
- .card:hover {
-  margin-bottom: 3rem;
-  margin-top: 1rem;
- }
 }
 
- /* Project cards */
 
+/*Hover*/
+.card:hover {
+  box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
+}
 
-/* purgecss end ignore */
-@tailwind utilities;
-/* purgecss start ignore */
-/* purgecss end ignore */
+.card:hover .card-button {
+  transform: translate(-50%, 50%);
+  opacity: 1;
+}
+
+.card:hover .project-button {
+  transform: translate(-50%, 0%);
+  opacity: 1;
+}
+
+@media (max-width: 768px) {
+  .card:hover {
+    margin-bottom: 3rem;
+    margin-top: 1rem;
+  }
+}
+
+/* Project cards */
